# LNN

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CITATION.cff  CONTRIBUTING.md  LICENSE  PR_DESCRIPTION.md  README.md  SECURITY_COVERAGE.md  config.yaml  pyproject.toml  renovate.json  requirements.txt  requirements_plot.txt  setup.cfg  setup.py  test.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  security.yml
.github/workflows/: black.yml  build.yml  stale.yml
docker/: Dockerfile  docker-compose.yaml  docker-entrypoint.sh
docs/: .buildinfo  genindex.html  index.html  introduction.html  objects.inv  papers.html  py-modindex.html  search.html  searchindex.js  sitemap.xml  usage.html
docs/_modules/: index.html
docs/_modules/lnn/: constants.html  model.html  utils.html
docs/_sources/: index.rst.txt  introduction.md.txt  papers.md.txt  usage.md.txt
docs/_sources/education/: education.rst.txt
docs/_sources/lnn/: LNN.rst.txt  formula.md.txt  formula.rst.txt
docs/_static/: copybutton.css
docs/_static/css/: badge_only.css  theme.css
docs/education/: education.html
docs/education/blogs/: blogs.html  moving_ai_beyond_its_narrow_view_of_intelligence.html
docs/education/examples/: examples.html  gm.html  reasoning.html
docs/education/tutorials/: tutorials.html
docs/education/videos/: videos.html
docs/lnn/: LNN.html  formula.html
docs/source/: introduction.md  papers.md  usage.md
docs/source/lnn/: LNN.rst
docsrc/: Makefile  generate_docs.sh  requirements.txt
docsrc/source/: conf.py  index.rst  introduction.md  papers.md  usage.md
docsrc/source/education/: education.rst
lnn/: __init__.py  _exceptions.py  _utils.py  constants.py  model.py  utils.py  viz.py
lnn/interpretability/: dash_app.py  viz.py
lnn/neural/: __init__.py
lnn/neural/activations/: node.py
lnn/neural/methods/: dynamiclinear.py  frechet.py  godel.py  lukasiewicz.py  lukasiewicztransparent.py  product.py
lnn/neural/parameters/: model.py  neuron.py  node.py
lnn/optim/: __init__.py  constraint_optim.py  primal_dual.py  primal_dual_neuron.py  primal_dual_slack.py
lnn/symbolic/: __init__.py  _bindings.py  _gm.py  _lifted.py  _trace.py  axioms.py  logic.py
lnn/symbolic/logic/: __init__.py  binary_neuron.py  connective_formula.py  connective_neuron.py  formula.py  function.py  grounding.py  (+7 more)
tests/general/: test_predicate.py
tests/optim/: primal_dual.py  simple_and.py
tutorials/: README.md
tutorials/Chapter 1 - Reasoning/: 0. Propositional Logic.ipynb  1. Propositional Bounds.ipynb  2. Propositional Learning.ipynb
tutorials/badges/: README.md
(+110 files in other folders)
