[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lnn"
version = "1.1.0"
description = "A Neural = Symbolic framework for weighted real-valued logic"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "IBM Research"},
]
keywords = ["neural-networks", "symbolic-ai", "logic", "machine-learning", "neuro-symbolic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "jupyter",
    "matplotlib>=3.10.8,<4",
    "networkx>=3.6.1,<4",
    "numpy>=2.4.3,<3",
    "pandas>=1.3.4",
    "setuptools>=65.5.1",
    "tabulate",
    "torch>=2.8.0,<3",
    "tqdm>=4.67.3,<5",
]

[project.urls]
Homepage = "https://github.com/IBM/LNN"
Documentation = "https://ibm.github.io/LNN/introduction.html"
Repository = "https://github.com/IBM/LNN"
Issues = "https://github.com/IBM/LNN/issues"

# DEVELOPMENT DEPENDENCIES
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
]

docs = [
    "sphinx>=5.0.0",
    "myst-parser>=0.18.0",
    "sphinx-material>=0.0.35",
    "sphinx-copybutton>=0.5.0",
    "commonmark>=0.9.1",
]

all = [
    "lnn[dev,docs]",
]

# TOOL CONFIGURATIONS

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]
per-file-ignores = {"__init__.py" = ["F401"]}

# Flake8 configuration (migrated from setup.cfg)
[tool.flake8]
per-file-ignores = ["*/__init__.py:F401"]
max-line-length = 88
extend-ignore = ["E203"]

[tool.hatch.build.targets.wheel]
packages = ["lnn"]
